--- a/actividad-02-01-grupo01-e1/package.json
+++ b/actividad-02-01-grupo01-e1/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "actividad-02-01-grupo01-e1",
+  "name": "file-system-example",
+  "version": "0.0.1",
   "description": "",
   "author": "",
   "private": true,
@@ -7,6 +8,7 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
+    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
@@ -44,7 +46,11 @@
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
+    "eslint": "^8.0.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "jest": "28.1.3",
+    "prettier": "^2.3.2",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "28.0.8",
